--- a/início.html
+++ b/início.html
@@ -7,8 +7,14 @@
     <title>Início</title>
 </head>
 <header>
+  <secction id="controle">
+  <div id="home"><li><a href="index.html">Home</a></li></div>
+  <div id="página"><li><a href="sobre.html">próxima página</a></li></div>
+  </secction>
+  <div>    
     <h2>Este espaço é para você mãe</h2>
     <img src="./img/Imagem1inicio.jpeg">
+  </div>  
 </header> 
 <body>   
     <section id="parte1">
