--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
    
-<header>     
+  <header>      
+    
     <nav>
       <a class="logo" id="topo" href="/"><strong>Paula Cardoso Educadora Infantil</strong></a>
       <ul class="nav-list">
@@ -21,15 +22,14 @@
       </ul>
     </nav>
   </header>
-
 <body>
-
-    <main>
-     <div class="container">
-     <img src="./img/FotoPaula.jpg" alt="foto Paula" class="image">
-     <p class="text"><q><strong>Educar é semear com sabedoria e colher com paciência!</strong></q><strong>Augusto Cury</strong></p>
-     </div>
-    </main>        
+<main>
+  <div class="container">
+  <img src="./img/FotoPaula.jpg" alt="foto Paula" class="image">
+  <p class="text"><q><strong>Compreender as diferentes fases da vida de uma criança é essencial. 
+  Cada pequeno ser é único, e suas necessidades individuais moldam o caminho da educação!</strong></q><strong>Augusto Cury</strong></p>
+  </div>
+</main>        
       
       <aside>
         <section id="contato">
@@ -44,12 +44,12 @@
         <a href="#topo">Voltar ao topo</a>
         <ul>
             <li><a href="https://www.instagram.com/paulacardosoein">Perfil do instagram @Paulacardosoein</a></li> 
-            <li><a href=" " >Perfil do Linkdeen</a></li>
+            <li><a href="https://t.me/promoentremaes" >Canal do Telegram</a></li>
         </ul>
         <p>&copy; 2024 Desenvolvido por Adriana Moura, Eduarda Lemos e Nicolas Santos <br>
         </p>
         <p>Projeto Desenvolve BD</p>
       </footer>
-  
+
 </body>  
 </html>
