--- a/produtos.html
+++ b/produtos.html
@@ -3,25 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sobre.css" />
-    <title>Sobre</title>
+    <link rel="stylesheet" href="produtos.css">
+    <title>Produtos</title>
 </head>
 <header>
-    <h2><strong>Sobre mim</strong></h2>
+    <section id="controle">
+        <div id="dicas"><li><a href="dicas.html">Dicas</a></li></div>
+        <div id="página"><li><a href="contato.html">Próxima página</a></li></div>
+    </section>
+    <div>
+    <h2>Produtos que indico</h2>
+    </div>
 </header>
 <body>
-    <main>
-        
-    </main>
-    <section>
-    <p> Paula Cardoso é <strong>graduada em Educação Infantil pela Universidade Federal de Viçosa</strong>,
-        Especialista em Práticas Pedagógicas pela Universidade Federal de Ouro Preto e Especialista em Ensino
-        de Artes Visuais pela Universidade Federal de Minas Gerais. Coordenadora da Escola de Formação de 
-        Servidores Públicos Municipais de Bom Despacho-MG e Tutora do Programa Nacional de Formação Continuada
-        a Distância nas Ações do FNDE. Ampla experiência na área da Educação, com ênfase em Métodos e Técnicas 
-        de Ensino. Experiência como professora de Educação Infantil nas redes pública e particular de ensino. 
-        Atua como professora na temática de Educação Infantil no Instituto ncora Educação</p>
-    </section>    
+    <h3>Acesse meu canal do Telegram, clicando no link abaixo e tenha acesso a todos produtos testados e recomendados <br>
+          por mim</h3>
+    <a class="link" href="https://t.me/promoentremaes">Link: Promoentremaes</a>
 </body>
 <footer>Paula Cardoso Educadora Infantil</footer>
 </html>
