--- a/sobre.html
+++ b/sobre.html
@@ -7,7 +7,13 @@
     <title>Sobre</title>
 </head>
 <header>
+    <section id="controle">
+    <div><li id="início"><a href="início.html">Início</a></li></div>
+    <div><li id="página"><a href="dicas.html">próxima página</a></li></div>
+    </section>
+    <div>
     <h2><strong>Sobre mim</strong></h2>
+    </div>
 </header>
 <body>
     <main>
@@ -20,7 +26,7 @@
         Servidores Públicos Municipais de Bom Despacho-MG e Tutora do Programa Nacional de Formação Continuada
         a Distância nas Ações do FNDE. Ampla experiência na área da Educação, com ênfase em Métodos e Técnicas 
         de Ensino. Experiência como professora de Educação Infantil nas redes pública e particular de ensino. 
-        Atua como professora na temática de Educação Infantil no Instituto ncora Educação</p>
+        Atua como professora na temática de Educação Infantil no Instituto Âncora Educação</p>
     </section>    
 </body>
 <footer>Paula Cardoso Educadora Infantil</footer>
