--- a/news.html
+++ b/news.html
@@ -6,6 +6,11 @@
     <link href="news.css" rel="stylesheet">
     <title>Formulário de contato:</title>
 </head>
+<header id="controle">
+    <div>
+    <li id="contato"><a href="contato.html">Página anterior</a></li>
+    </div>
+</header>
 <body>
     <h1>Formulário de Contato</h1>
     <h3>Cadastre seu email para receber dicas e novidades</h3>
@@ -18,6 +23,7 @@
         <textarea name="message" placeholder="Deixe uma mensagem para Paula Cardoso" id="message"  required></textarea>
         <input type="hidden" name="_next" value="http://127.0.0.1:5500/Obrigado.html">
         <button type="submit">Send</button>
-    </form>    
-</body>
+    </form>  
+    </body>
+    <footer>Paula Cardoso Educadora Infantil</footer> 
 </html>
