--- a/SITE PAULA 3/index.html
+++ b/SITE PAULA 3/index.html
@@ -26,29 +26,21 @@
 <main>
   <div class="container">
   <img src="./img/FotoPaula.jpg" alt="foto Paula" class="image">
-  <p class="text"><q><strong>Educar é semear com sabedoria e colher com paciência!</strong></q><strong>Augusto Cury</strong></p>
+  <p class="text"><q><strong>Compreender as diferentes fases da vida de uma criança é essencial. 
+  Cada pequeno ser é único, e suas necessidades individuais moldam o caminho da educação!</strong></q><strong>Augusto Cury</strong></p>
   </div>
-</main>        
+</main>  
       
-      <aside>
-        <section id="contato">
-            <h2>Contato</h2>
-            <p>Entre em contato conosco através do email:<br>
-            paulacardosoein@gmail.com<br>
-            Gostariamos muito de saber suas sugestões e esclarecer suas dúvidas.</p>
-        </section>
-      </aside>
-
-      <footer>
+<footer>
         <a href="#topo">Voltar ao topo</a>
         <ul>
             <li><a href="https://www.instagram.com/paulacardosoein">Perfil do instagram @Paulacardosoein</a></li> 
-            <li><a href=" " >Perfil do Linkdeen</a></li>
+            <li><a href="https://t.me/promoentremaes" >Canal do Telegram</a></li>
         </ul>
         <p>&copy; 2024 Desenvolvido por Adriana Moura, Eduarda Lemos e Nicolas Santos <br>
         </p>
         <p>Projeto Desenvolve BD</p>
-      </footer>
+</footer>
 
 </body>  
 </html>
