--- a/contato.html
+++ b/contato.html
@@ -15,7 +15,7 @@
     <h2>CONTATO</h2></header>
 <body>
     <P>Entre em contato conosco através do email:<br>
-       paulacardosoein@gmail.com<br>
+       <strong>paulacardosoein@gmail.com</strong><br>
        Gostariamos muito de saber suas sugestões e esclarecer suas dúvidas.</p>
 </body>
 <footer><strong>Paula Cardoso Educadora Infantil</strong></footer>
