--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
 </head>
 <header id="controle">
     <div>
-    <li id="contato"><a href="contato.html">Página anterior</a></li>
+    <li id="contato"><a href="index.html">Home</a></li>
     </div>
 </header>
 <body>
