--- a/produtos.html
+++ b/produtos.html
@@ -7,11 +7,10 @@
     <title>Produtos</title>
 </head>
 <header>
-    <section id="controle">
-        <div id="dicas"><li><a href="dicas.html">Dicas</a></li></div>
-        <div id="página"><li><a href="contato.html">Próxima página</a></li></div>
-    </section>
-    <div>
+    <div id="controle">
+        <div id="dicas"><li><a href="dicas.html"><u>Dicas</u></a></li></div>
+        <div id="página"><li><a href="contato.html"><u>Próxima página</u></a></li></div>
+    </div>
     <h2>Produtos que indico</h2>
     </div>
 </header>
