--- a/dicas.html
+++ b/dicas.html
@@ -34,7 +34,7 @@
            </div>
            </article>
             
-         <article id="post2"><h2>Uma das chaves para boa relação confiança com seu filho é a confiança</h2>
+         <article id="post2"><h2>Uma das chaves para boa relação de confiança com seu filho é a confiança</h2>
          <p>E não duvide: mesmo uma promessa “boba” ou “simples” importa. E MUITO!!!
 
          ⚠️ Seja bebê, criança ou adolescente, se prometer que seja uma bala, CUMPRA com a promessa.
