--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
 </main>  
       
 <footer>
-        <a href="#topo">Voltar ao topo</a>
+      <div id="footer">
+        <a href="#topo"><strong>Voltar ao topo</strong></a>
         <ul>
-            <li><a href="https://www.instagram.com/paulacardosoein">Perfil do instagram @Paulacardosoein</a></li> 
-            <li><a href="https://t.me/promoentremaes" >Canal do Telegram</a></li>
+            <li><a href="https://www.instagram.com/paulacardosoein"><strong>Perfil do instagram:</strong> @Paulacardosoein</a></li> 
+            <li><a href="https://t.me/promoentremaes" ><strong>Canal do Telegram:</strong> Promoentremaes</a></li>
         </ul>
+      </div>  
         <p>&copy; 2024 Desenvolvido por Adriana Moura, Eduarda Lemos e Nicolas Santos <br>
         </p>
         <p>Projeto Desenvolve BD</p>
