--- a/início.html
+++ b/início.html
@@ -13,7 +13,7 @@
   </section>
   <div>    
     <h2>Este espaço é para mulheres que <br>
-      estão determinadas a serem mães melhores.
+      estão determinadas a serem mães melhores!
     </h2>
     <img src="./img/Imagem1inicio.jpeg">
   </div>  
